[package]
name = "findish"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
repository = "https://github.com/olson-sean-k/treeish"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "findish"

[dependencies]
miette = "^7.2.0"
structopt = "^0.3.0"
thiserror = "^1.0.0"

[dependencies.treeish]
path = "../.."
features = ["miette"]
